fixed mobile alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,10 +28,15 @@ a {
   font-weight: bold;
 }
 
+.embed_instagram{
+  width: 500px;
+}
+
 .markdown h1{
   font-size: 40px;
   margin-bottom: 10px;
   margin-top: 20px;
+  display: contents;
   }
   
   .markdown h2{
@@ -39,6 +44,7 @@ a {
     margin-bottom: 10px;
     margin-top: 20px;
     font-weight: bold;
+    display: contents;
     }
   
     .markdown h3{
